tests/expected_invalid_direct_proof_construct.diag.out
<input>:7:5: error: proof values must be created with 'prove'
        Receipt { count: 1 }
        ^^^^^^^^^^^^^^^^^^^^
